kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boilerapp-deployment
  namespace: default
  labels:
    app: boilerapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: boilerapp
  template:
    metadata:
      labels:
        app: boilerapp
    spec:
      containers:
        - name: boilerapp
          image: 242880561312.dkr.ecr.ap-south-1.amazonaws.com/hts-ai/boilerapp
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
