kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: boilerapp-service
  namespace: default
  labels:
    app: boilerapp
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: boilerapp
